# cuda-grmonty

./: .bazelrc  .clang-format  .gitignore  .pre-commit-config.yaml  MODULE.bazel  README.md  cpplint.cfg  plot_spectrum.py
.github/workflows/: bazel-build.yml  bazel-coverage.yml  bazel-test.yml  pre-commit.yml
cuda-grmonty/: BUILD  main.cpp
cuda_grmonty/: BUILD  consts.hpp  harm_data.cpp  harm_data.cuh  harm_data.hpp  harm_model.cpp  harm_model.cuh  harm_model.hpp  hotcross.cpp  hotcross.cu  hotcross.cuh  hotcross.hpp  hotcross_table.cu  hotcross_table.cuh  integration.cpp  integration.hpp  jnu_mixed.cpp  jnu_mixed.cuh  jnu_mixed.hpp  linalg.hpp  main.cpp  mathfn.cpp  mathfn.hpp  monty_rand.cpp  monty_rand.hpp  ndarray.hpp  parse_verbosity.cpp  parse_verbosity.hpp  photon.cu  photon.cuh  photon.hpp  photon_queue.cpp  photon_queue.hpp  proba.cpp  proba.cuh  proba.hpp  radiation.cpp  radiation.cuh  radiation.hpp  super_photon.cu  (+6 more)
cuda_grmonty/benchmarks/: BUILD  ndarray_benchmark.cpp
cuda_grmonty/tests/: BUILD  harm_data_test.cpp  harm_model_test.cpp  integration_test.cpp  ndarray_test.cpp
