# C++ bazel rules
bazel_dep(name = "rules_cc", version = "0.1.1")

# CUDA rules
bazel_dep(name = "rules_cuda", version = "0.2.4")

# Abseil
bazel_dep(name = "abseil-cpp", version = "20250512.0")

# spdlog
bazel_dep(name = "spdlog", version = "1.15.3")

# GoogleTest
bazel_dep(name = "googletest", version = "1.17.0")

# Benchmark
bazel_dep(name = "google_benchmark", version = "1.9.4")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)
